nav and z-index issue, removed part of footer to keep it simple

--- a/styles.css
+++ b/styles.css
@@ -88,6 +88,7 @@ main, #header_content {
 	left: 0px;
 	right: 0px;
 	background-color: white;
+    z-index: 1;
 }
 
 header {
